# MutationMotif

./: .gitignore  .hgignore  .hgtags  README.md  README.rst  azure-pipelines.yml  license.txt  mm-environment.yml  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: testing_develop.yml
doc/: demo_plot.cfg
manuscript_scripts/: sample_snp.py  snptables_to_aln.py  test_sampling.py  test_strand.py
mutation_motif/: __init__.py  all_counts.py  aln_to_counts.py  complement.py  distribution.py  draw.py  entropy.py  height.py  log_lin.py  logo.py  motif_count.py  mutation_analysis.py  profile.py  spectra_analysis.py  text.py  util.py
scripts/: make_figs.py  mutation_motif  sample_snp.py  snptables_to_aln.py  strand.py  test_strand.py
src/mutation_motif/: __init__.py  all_counts.py  aln_to_counts.py  complement.py  draw.py  entropy.py  height.py  log_lin.py  motif_count.py  mutation_analysis.py  profile.py  spectra_analysis.py  util.py
src/mutation_motif/cfgs/: grid.cfg  nbr.cfg  nbr_matrix.cfg  nbr_paths.cfg  spectra.cfg
tests/: alltests.py  test_apps.py  test_complement.py  test_control.py  test_entropy.py  test_heights.py  test_motif_count.py  test_util.py
tests/data/: AtoC_300.json  AtoC_genomic.json  arbitrary_grid.cfg  auto_intergen_combined_counts.txt  auto_intron_combined_counts.txt  counts-CtoT-ss.txt  counts-CtoT.txt  counts-combined.txt  json1_paths.cfg  just_nuc.fasta  load_seqs_to_array.fasta  nbr_matrix_paths.cfg  nbr_paths.cfg  sample_AtoC.fasta  spectra_analysis.json
tests/data/CtoT/: 2.json  3.json  4.json  summary.txt
tests/data/directions/: AtoC.json  AtoG.json  AtoT.json  CtoA.json  CtoG.json  CtoT.json  GtoA.json  GtoC.json  GtoT.json  TtoA.json  TtoC.json  TtoG.json  freq_All-chrom_A-GC_All-AtoC.txt  freq_All-chrom_A-GC_All-AtoG.txt  freq_All-chrom_A-GC_All-AtoT.txt  freq_All-chrom_A-GC_All-CtoA.txt  freq_All-chrom_A-GC_All-CtoG.txt  freq_All-chrom_A-GC_All-CtoT.txt  freq_All-chrom_A-GC_All-GtoA.txt  freq_All-chrom_A-GC_All-GtoC.txt  freq_All-chrom_A-GC_All-GtoT.txt  freq_All-chrom_A-GC_All-TtoA.txt  freq_All-chrom_A-GC_All-TtoC.txt  freq_All-chrom_A-GC_All-TtoG.txt
tests/data/entropy/: control.fasta  gap.fasta  ref.fasta
