[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mutation_motif"
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au"},
]
keywords = ["biology", "genomics", "statistics", "genetics", "evolution", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.11"
dependencies = ["click",
        "cogent3[extra]",
        "kaleido",
        "numpy",
        "scipy",
        "scitrack",
        "pandas",
        "plotly",
        "psutil",
        "requests",
        "rpy2",
        ]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ]
dynamic = ["version", "description"]

[project.sdist]
include = ["requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[project.scripts]
mutation_analysis = "mutation_motif.mutation_analysis:main"
aln_to_counts = "mutation_motif.aln_to_counts:main"
all_counts = "mutation_motif.all_counts:main"
mutation_draw = "mutation_motif.draw:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox",
]
dev = [
    "black",
    "click",
    "cog",
    "docformatter",
    "flit",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | doc
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
